--- a/TextFlip.html
+++ b/TextFlip.html
@@ -1,21 +1,12 @@
-
-<html><head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="description" content="Flip your text. Flip everything you write with Unicode. SOAP POWER!">
-  <title>I'm flipping your mother</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-  <link rel="stylesheet" href="style.css">
-  
-  <style type="text/css">
-  p {
-    color: rgb(31, 51, 71);
-    font-family:courier,arial,helvetica;
-    font-size: 210%;
-  }
-  textarea { font-family: "Arial Unicode MS", Batang }
-  </style>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="description" content="Flip your text. Flip everything you write with Unicode. SOAP POWER!">
+    <title>TEXT FLIP</title>
+    <link rel="stylesheet" href="style.css">
   <script>
+
   function flip() {
    var result = flipString(document.f.original.value.toLowerCase());
    document.f.flipped.value = result;
@@ -70,22 +61,28 @@
   for (i in flipTable) {
     flipTable[flipTable[i]] = i
   }
-  </script></head><body>
+  </script>
+  </head>
+  
+  <body>
    
    <header class="header clearfix">
-    <ul class="header__text">
-       <a href="https://github.com/CTRL-soap/TextFlip" class="header__logo">TEXTFLIP</a>
-       <a href="https://github.com/CTRL-soap" class="header__tag">by CTRL-soap</a>
+    <ul class="text">
+       <a href="https://github.com/313-Teo/TextFlip" class="tag">TEXTFLIP</a>
+       <a href="https://github.com/313-Teo" class="tag">by 313-Teo</a>
     </ul>
    </header> 
   
   <center>
-  <form name="f"><p style="display: inline-block; padding:15px;">ORIGINAL:</p>
+  <form name="f">
+  <h1>ORIGINAL:</h1>
   <br>
-  <textarea style="border: 2px solid rgb(31, 51, 71);" rows="6" cols="50" name="original"  onkeyup="flip()"></textarea> 
+  <textarea rows="10" cols="50" name="original"  onkeyup="flip()"></textarea> 
   <br>
-  <p style="display: inline-block; padding:15px;">FLIPPED:</p>
+  <h1>FLIPPED:</h1>
   <br>
-  <textarea style="border: 2px solid rgb(31, 51, 71);" rows="6" cols="50" name="flipped"></textarea>
+  <textarea rows="10" cols="50" name="flipped"></textarea>
   </form>
-  </center></body></html>
+  </center>
+
+</body></html>
